- Fix thumbnail caching and overwrite

--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -254,13 +254,13 @@ span.grippy::after {
                                       </div>
                                       <div>
                                         <span class="btn-group btn-group-xs btn-group-justified">
-                                            <a class="btn btn-default" href="#" id="set_thumbnail">{% trans "Save Thumbnail" %}</a>
+                                            <a class="btn btn-default" href="#" id="set_thumbnail">{% trans "Save" %}</a>
                                             <!-- span class="input-group-addon">
                                                 <form id="form1" runat="server">
                                                     <input type='file' id="imgInp" />
                                                 </form>
                                             </span -->
-                                            <a class="btn btn-default" href="#" id="change_thumbnail">{% trans "Edit Thumbnail" %}</a>
+                                            <a class="btn btn-default" href="#" id="change_thumbnail">{% trans "Edit" %}</a>
                                         </span>
                                       </div>
                                     </div>
