--- a/geonode/templates/metadata_base.html
+++ b/geonode/templates/metadata_base.html
@@ -61,12 +61,16 @@
         #id_resource-title {
             width: 100% !important;
         }
-        #edit-metadata .tab-pane > .panel-group >.panel.panel-default {
+        #edit-metadata .tab-pane > .panel-group >.panel.panel-default, #settings .panel-group > .panel.panel-default {
           border: none;
         }
-        #edit-metadata .tab-pane {
-          min-height: 350px;
+        #mdeditor_form > div.tab-content > .tab-pane {
+          min-height: 450px;
         }
+        #metadata_update {
+          min-height: 550px;
+        }
+      
         .leaflet-container { /* all maps */
             height: 250px !important;
         }
