--- a/geonode/documents/templates/layouts/doc_panels.html
+++ b/geonode/documents/templates/layouts/doc_panels.html
@@ -277,12 +277,14 @@
     <div class="col-xs-12 col-lg-4">
       <div class="panel-group">
           <div class="panel panel-default">
-              <!-- div class="panel-heading">Data info</div -->
               <div class="panel-body">
                 <div class="panel panel-default" >
-                  
                   <div class="panel-heading">Publishing</div>
                   <div class="panel-body">
+                    <div>
+                        <span><label for="{{ document_form.metadata_uploaded_preserve|id }}">{{ document_form.metadata_uploaded_preserve.label }}</label></span>
+                        {{ document_form.metadata_uploaded_preserve }}
+                    </div>
                     <div>
                         <span><label for="{{ document_form.is_published|id }}">{{ document_form.is_published.label }}</label></span>
                         {{ document_form.is_published }}
