--- a/geonode/contrib/risks/client/assets/css/report.css
+++ b/geonode/contrib/risks/client/assets/css/report.css
@@ -513,3 +513,20 @@ footer:after {
     font-size: 18px;
     float: right;
 }
+.map-axis {
+    width: 86px;
+    border: 1px solid gray;
+    margin-left: 1px;
+    margin-top: 1px;
+    white-space: nowrap;
+    overflow-y: hidden;
+    text-overflow: ellipsis;
+    padding: 3px;
+    cursor: pointer;
+    color: blue;
+}
+.map-axis.active {
+    cursor: auto;
+    color: black;
+}
+
