--- a/geonode/contrib/risks/client/assets/css/common.less
+++ b/geonode/contrib/risks/client/assets/css/common.less
@@ -109,3 +109,11 @@
   cursor: pointer;
   color: @brand-primary;
 }
+
+.disaster-chart-tooltip{
+    margin: 0px;
+    padding: 10px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(204, 204, 204);
+    white-space: nowrap;
+}
