--- a/geonode/contrib/risks/client/assets/css/risk.css
+++ b/geonode/contrib/risks/client/assets/css/risk.css
@@ -6825,6 +6825,9 @@ button.close {
   border: 1px solid #cccccc;
   white-space: nowrap;
 }
+.leaflet-clickable {
+  cursor: zoom-in;
+}
 @font-face {
   font-family: 'thinkhazard';
   src: url('../webfonts/thinkhazard/fonts/thinkhazard.eot?-xr90r9');
