--- a/geonode/contrib/risks/client/assets/css/risk.css
+++ b/geonode/contrib/risks/client/assets/css/risk.css
@@ -6856,8 +6856,20 @@ button.close {
   text-transform: capitalize;
   margin-top: 10px;
 }
+/* Leaflet custom style*/
 .leaflet-clickable {
   cursor: zoom-in;
+}
+.disaster-map-tooltip > .leaflet-popup-tip-container {
+  display: none;
+}
+.disaster-map-tooltip > .leaflet-popup-content-wrapper {
+  padding: 0px;
+}
+.disaster-map-tooltip > .leaflet-popup-content-wrapper > .leaflet-popup-content {
+  min-width: 100px;
+  max-width: 100px;
+  text-align: center;
 }
 @font-face {
   font-family: 'thinkhazard';
