first simple impl of further resources

--- a/geonode/contrib/risks/client/assets/css/risk-disaster.less
+++ b/geonode/contrib/risks/client/assets/css/risk-disaster.less
@@ -11,7 +11,7 @@
   background-color: @body-bg;
 }
 
-@import "../../node_modules/react-nouislider/example/nouislider.css";
+@import (less) "../../node_modules/react-nouislider/example/nouislider.css";
 @import "./variables.less";
 @import "./font-awesome.min.css";
 
