--- a/geonode/contrib/risks/client/assets/css/common.less
+++ b/geonode/contrib/risks/client/assets/css/common.less
@@ -206,3 +206,10 @@
     max-width: 100px;
     text-align: center;
 }
+
+.disaster-fth-res-container {
+  margin: 50px 0px 20px 0px;
+  background-color: #f5f5f5;
+  padding: 27px 30px;
+  overflow: hidden;
+}
