--- a/geonode/contrib/risks/client/assets/css/risk.css
+++ b/geonode/contrib/risks/client/assets/css/risk.css
@@ -6898,6 +6898,12 @@ button.close {
   max-width: 100px;
   text-align: center;
 }
+.disaster-fth-res-container {
+  margin: 50px 0px 20px 0px;
+  background-color: #f5f5f5;
+  padding: 27px 30px;
+  overflow: hidden;
+}
 @font-face {
   font-family: 'thinkhazard';
   src: url('../webfonts/thinkhazard/fonts/thinkhazard.eot?-xr90r9');
