--- a/geonode/contrib/risks/client/assets/css/common.less
+++ b/geonode/contrib/risks/client/assets/css/common.less
@@ -218,3 +218,10 @@
   padding: 27px 30px;
   overflow: hidden;
 }
+.link-sharing{
+    position: relative;
+    float: right;
+}
+.link-input {
+    display: none;
+}
