--- a/geonode/contrib/risks/client/assets/css/risk.css
+++ b/geonode/contrib/risks/client/assets/css/risk.css
@@ -6908,6 +6908,13 @@ button.close {
   padding: 27px 30px;
   overflow: hidden;
 }
+.link-sharing {
+  position: relative;
+  float: right;
+}
+.link-input {
+  display: none;
+}
 @font-face {
   font-family: 'thinkhazard';
   src: url('../webfonts/thinkhazard/fonts/thinkhazard.eot?-xr90r9');
