Added tutorial plugin

--- a/geonode/contrib/risks/client/assets/css/risk.less
+++ b/geonode/contrib/risks/client/assets/css/risk.less
@@ -1,4 +1,6 @@
 @import "../../node_modules/bootstrap/less/bootstrap.less";
+@import (less) "../../node_modules/react-joyride/lib/react-joyride-compiled.css";
+@import (less) "../../MapStore2/web/client/components/tutorial/style/tutorial.css";
 @import "./common.less";
 @import "./variables.less";
 @import "./icon.less";
