--- a/geonode/contrib/risks/client/assets/css/disaster.css
+++ b/geonode/contrib/risks/client/assets/css/disaster.css
@@ -7,6 +7,14 @@
  */
   /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
   /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
+  /*# sourceMappingURL=react-joyride-compiled.css.map*/
+  /**
+ * Copyright 2017, GeoSolutions Sas.
+ * All rights reserved.
+ *
+ * This source code is licensed under the BSD-style license found in the
+ * LICENSE file in the root directory of this source tree.
+ */
   /* Leaflet custom style*/
 }
 .disaster html {
@@ -6818,6 +6826,394 @@
   .disaster .hidden-print {
     display: none !important;
   }
+}
+.disaster .joyride-beacon {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  padding: 0;
+  height: 36px;
+  position: relative;
+  width: 36px;
+  z-index: 1500;
+}
+.disaster .joyride-beacon:active,
+.disaster .joyride-beacon:focus,
+.disaster .joyride-beacon:hover {
+  outline: none;
+}
+.disaster .joyride-beacon__inner {
+  -webkit-animation: joyride-beacon-inner 1.2s infinite ease-in-out;
+  animation: joyride-beacon-inner 1.2s infinite ease-in-out;
+  background-color: #f04;
+  border-radius: 50%;
+  display: block;
+  height: 50%;
+  left: 50%;
+  opacity: .7;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 50%;
+}
+.disaster .joyride-beacon__outer {
+  -webkit-animation: joyride-beacon-outer 1.2s infinite ease-in-out;
+  animation: joyride-beacon-outer 1.2s infinite ease-in-out;
+  background-color: rgba(255, 0, 68, 0.2);
+  border: 2px solid #f04;
+  border-radius: 50%;
+  box-sizing: border-box;
+  display: block;
+  height: 100%;
+  left: 0;
+  opacity: .9;
+  position: absolute;
+  top: 0;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
+  width: 100%;
+}
+.disaster .joyride-overlay {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1500;
+}
+.disaster .joyride-hole {
+  border-radius: 4px;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.5), 0 0 15px rgba(0, 0, 0, 0.5);
+  position: absolute;
+}
+.disaster .joyride-hole.safari {
+  box-shadow: 0 0 999px 9999px rgba(0, 0, 0, 0.5), 0 0 15px rgba(0, 0, 0, 0.5);
+}
+.disaster .joyride-tooltip {
+  background-color: #fff;
+  border-radius: 4px;
+  color: #555;
+  cursor: default;
+  -webkit-filter: drop-shadow(-1px -2px 3px rgba(0, 0, 0, 0.3)) drop-shadow(1px 2px 3px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(-1px -2px 3px rgba(0, 0, 0, 0.3)) drop-shadow(1px 2px 3px rgba(0, 0, 0, 0.3));
+  opacity: 0;
+  padding: 20px;
+  pointer-events: auto;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  width: 290px;
+  z-index: 1510;
+}
+.disaster .joyride-tooltip--animate {
+  -webkit-animation: joyride-tooltip 0.4s forwards;
+  animation: joyride-tooltip 0.4s forwards;
+  -webkit-animation-timing-function: cubic-bezier(0, 1.05, 0.55, 1.18);
+  animation-timing-function: cubic-bezier(0, 1.05, 0.55, 1.18);
+}
+.disaster .joyride-tooltip__triangle {
+  background-repeat: no-repeat;
+  position: absolute;
+}
+.disaster .joyride-tooltip.bottom,
+.disaster .joyride-tooltip.bottom-left,
+.disaster .joyride-tooltip.bottom-right {
+  margin-top: 18px;
+}
+.disaster .joyride-tooltip.bottom-left .joyride-tooltip__triangle,
+.disaster .joyride-tooltip.bottom-right .joyride-tooltip__triangle,
+.disaster .joyride-tooltip.bottom .joyride-tooltip__triangle {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='36' height='18' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23fff' d='M36 18L18 0 0 18z'/%3E%3C/svg%3E");
+  height: 18px;
+  left: 50%;
+  top: -16px;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 36px;
+}
+.disaster .joyride-tooltip.top,
+.disaster .joyride-tooltip.top-left,
+.disaster .joyride-tooltip.top-right {
+  margin-bottom: 18px;
+}
+.disaster .joyride-tooltip.top-left .joyride-tooltip__triangle,
+.disaster .joyride-tooltip.top-right .joyride-tooltip__triangle,
+.disaster .joyride-tooltip.top .joyride-tooltip__triangle {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='36' height='18' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23fff' d='M0 0l18 18L36 0z'/%3E%3C/svg%3E");
+  bottom: -16px;
+  height: 18px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 36px;
+}
+.disaster .joyride-tooltip.bottom-left .joyride-tooltip__triangle,
+.disaster .joyride-tooltip.top-left .joyride-tooltip__triangle {
+  left: 3%;
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+}
+@media screen and (min-width: 480px) {
+  .disaster .joyride-tooltip.bottom-left .joyride-tooltip__triangle,
+  .disaster .joyride-tooltip.top-left .joyride-tooltip__triangle {
+    left: 2%;
+  }
+}
+.disaster .joyride-tooltip.bottom-right .joyride-tooltip__triangle,
+.disaster .joyride-tooltip.top-right .joyride-tooltip__triangle {
+  left: auto;
+  right: 3%;
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+}
+@media screen and (min-width: 480px) {
+  .disaster .joyride-tooltip.bottom-right .joyride-tooltip__triangle,
+  .disaster .joyride-tooltip.top-right .joyride-tooltip__triangle {
+    right: 2%;
+  }
+}
+.disaster .joyride-tooltip.left {
+  margin-right: 18px;
+}
+.disaster .joyride-tooltip.left .joyride-tooltip__triangle {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='18' height='36' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23fff' d='M0 36l18-18L0 0z'/%3E%3C/svg%3E");
+  height: 36px;
+  right: -16px;
+  width: 18px;
+}
+.disaster .joyride-tooltip.right {
+  margin-left: 18px;
+}
+.disaster .joyride-tooltip.right .joyride-tooltip__triangle {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='18' height='36' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23fff' d='M18 0L0 18l18 18z'/%3E%3C/svg%3E");
+  height: 36px;
+  left: -16px;
+  width: 18px;
+}
+.disaster .joyride-tooltip__close {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  padding: 0;
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='12' height='12' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.117.323L8.044 6.398 2.595.323a1.105 1.105 0 0 0-1.562 1.562L6.482 7.96.323 14.119a1.105 1.105 0 0 0 1.562 1.562L7.96 9.608l5.449 6.073a1.103 1.103 0 1 0 1.56-1.562L9.517 8.046l6.159-6.161a1.103 1.103 0 1 0-1.56-1.562z' fill='rgba(85,85,85,0.5)'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 12px;
+  position: absolute;
+  right: 10px;
+  text-decoration: none;
+  top: 10px;
+  width: 12px;
+  z-index: 10;
+  display: block;
+}
+.disaster .joyride-tooltip__close:active,
+.disaster .joyride-tooltip__close:focus,
+.disaster .joyride-tooltip__close:hover {
+  outline: none;
+}
+.disaster .joyride-tooltip__close:focus,
+.disaster .joyride-tooltip__close:hover {
+  color: rgba(60, 60, 60, 0.5);
+  outline: none;
+}
+.disaster .joyride-tooltip__close--header {
+  right: 20px;
+  top: 20px;
+}
+.disaster .joyride-tooltip__header {
+  border-bottom: 1px solid #f04;
+  color: #555;
+  font-size: 20px;
+  padding-bottom: 6px;
+  padding-right: 18px;
+  position: relative;
+}
+.disaster .joyride-tooltip__header ~ .joyride-tooltip__main {
+  padding: 12px 0 18px;
+}
+.disaster .joyride-tooltip__main {
+  font-size: 16px;
+  padding-bottom: 18px;
+  padding-right: 18px;
+}
+.disaster .joyride-tooltip__footer {
+  text-align: right;
+}
+.disaster .joyride-tooltip__button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  display: inline-block;
+  line-height: 1;
+  padding: 0;
+}
+.disaster .joyride-tooltip__button:active,
+.disaster .joyride-tooltip__button:focus,
+.disaster .joyride-tooltip__button:hover {
+  outline: none;
+}
+.disaster .joyride-tooltip__button--primary {
+  background-color: #f04;
+  border-radius: 4px;
+  color: #fff;
+  padding: 6px 12px;
+  transition: background-color 0.2s ease-in-out;
+}
+.disaster .joyride-tooltip__button--primary:active,
+.disaster .joyride-tooltip__button--primary:focus,
+.disaster .joyride-tooltip__button--primary:hover {
+  background-color: #ff1f5a;
+  color: #fff;
+}
+.disaster .joyride-tooltip__button--secondary {
+  color: #f04;
+  margin-right: 10px;
+}
+.disaster .joyride-tooltip__button--skip {
+  color: #ccc;
+  float: left;
+  margin-right: 10px;
+}
+.disaster .joyride-tooltip--standalone .joyride-tooltip__main {
+  padding-bottom: 0;
+}
+.disaster .joyride-tooltip--standalone .joyride-tooltip__footer {
+  display: none;
+}
+@media screen and (min-width: 480px) {
+  .disaster .joyride-tooltip {
+    width: 360px;
+  }
+}
+@media screen and (min-width: 960px) {
+  .disaster .joyride-tooltip {
+    width: 450px;
+  }
+}
+@-webkit-keyframes joyride-tooltip {
+  0% {
+    -webkit-transform: scale(0.1);
+    transform: scale(0.1);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: perspective(1px) scale(1);
+    transform: perspective(1px) scale(1);
+  }
+}
+@keyframes joyride-tooltip {
+  0% {
+    -webkit-transform: scale(0.1);
+    transform: scale(0.1);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: perspective(1px) scale(1);
+    transform: perspective(1px) scale(1);
+  }
+}
+@-webkit-keyframes joyride-beacon-inner {
+  20% {
+    opacity: 0.9;
+  }
+  90% {
+    opacity: 0.7;
+  }
+}
+@keyframes joyride-beacon-inner {
+  20% {
+    opacity: 0.9;
+  }
+  90% {
+    opacity: 0.7;
+  }
+}
+@-webkit-keyframes joyride-beacon-outer {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  45% {
+    opacity: .7;
+    -webkit-transform: scale(0.75);
+    transform: scale(0.75);
+  }
+  to {
+    opacity: .9;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes joyride-beacon-outer {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  45% {
+    opacity: .7;
+    -webkit-transform: scale(0.75);
+    transform: scale(0.75);
+  }
+  to {
+    opacity: .9;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+.disaster .joyride-hole {
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.75), 0 0 15px rgba(0, 0, 0, 0.75);
+}
+.disaster .joyride-tooltip__button--secondary {
+  color: #888;
+}
+.disaster .joyride-tooltip__header {
+  font-family: Georgia, serif;
+  font-size: 1.5em;
+  border-bottom: 1px solid #ddd;
+}
+.disaster .joyride-tooltip__main {
+  font-size: 0.9em;
+}
+.disaster .tutorial-presentation-position {
+  position: fixed;
+  width: 100%;
+  left: 0;
+}
+.disaster #tutorial-intro-checkbox-container {
+  overflow: hidden;
+  margin: 5px 0 5px 0;
+  border-top: 1px dashed #777;
+  font-size: 0.8em;
+  font-style: italic;
+}
+.disaster #tutorial-intro-checkbox {
+  margin: 5px 10px 0 0;
+  width: 10px;
+  height: 10px;
+  cursor: pointer;
 }
 .disaster #map {
   position: relative;
